Fixed facet alignment

--- a/app/assets/stylesheets/ncelp.scss
+++ b/app/assets/stylesheets/ncelp.scss
@@ -427,3 +427,12 @@ form#new_resource {
   }
 
 }
+
+#facets {
+  .facet-field-heading {
+    a {
+      width: 90%;
+      display: inline-block;
+    }
+  }
+}
